syntax = "proto3";

package ticket_item;

option go_package = "campus_acticity_ticketing_system/ticket_base/proto";

message Item {
  int64 id = 1;
  string item_name = 2;
  string abstract_message = 3;
  int64 item_type1_id = 4;
  string item_type1_name = 5;
  int64 item_type2_id = 6;
  string item_type2_name = 7;
  int32 state = 8;
  string basic_description = 9;
  string project_description = 10;
  string reminder_description = 11;
  string longitude = 12;
  string latitude = 13;
  double avg_score = 14;
  int32 comment_count = 15;
  int64 place_id = 16;
  string start_time = 17;
  string end_time = 18;
  string created_time = 19;
  string updated_time = 20;
  bool status = 21;
}